test/Tests/Interface/ExtraOutput.golden

test\Tests\Interface\ExtraOutput.hs:56:5: error:
    * Output of type V 4 Float of Vertex shader named "main",
      with decorations '[ 'Location 1],
      does not match any input of Fragment shader named "main".
    * In the expression:
        withStructInput @VertexInput @(Triangle List)
          $ StartPipeline :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = withStructInput @VertexInput @(Triangle List)
                $ StartPipeline :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
56 |   = withStructInput @VertexInput @(Triangle List)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
